# Python-WLED-api-Wrapper

./: .gitignore  Config.json  LICENSE  README.md  main.py  pyproject.taml  pyproject.toml  run.py  setup.py
.github/workflows/: python-publish.yml
Tests/: Config.json  run.py
WLED/: Exceptions.py  __init__.py  pyproject.toml
src/wled/: __init__.py
wled/: Exceptions.py  __init__.py  config.json
