[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "WLED_light_controller"
version = "0.3.1"
authors = [
  { name="Carson Coder", email="carsondpool@gmail.com" },
]
description = "A small WLED light controller in Python"
readme = "./README.md"
license = { file="./LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pkg_resources"
]

[project.urls]
"Homepage" = "https://github.com/carson-coder/Python-WLED-api-Wrapper"
"Bug Tracker" = "https://github.com/carson-coder/Python-WLED-api-Wrapper/issues"